# ssh-benchmark

./: .dockerignore  Taskfile.yml  demo.rs  flake.nix  k8s.yaml
.github/workflows/: ci.yaml
client/: Cargo.toml  Dockerfile
client/src/: main.rs
k8s/: client-job-1.k8s.yaml  client-job-10.k8s.yaml  client-job-100.k8s.yaml  client-job-1000.k8s.yaml  client-job-10000.k8s.yaml  client-job-100000.k8s.yaml  client-job-1000000.k8s.yaml  client-svc.k8s.yaml  gen.py  ns.k8s.yaml  server-sts.k8s.yaml  server-svc.k8s.yaml
server/: Cargo.toml  Dockerfile  ssh-statefulset.k8s.yaml
server/src/: main.rs
