[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
console-subscriber = "0.4.0"
futures = "0.3.31"
indicatif = "0.17.8"
russh = "0.45"
russh-keys = "0.45"
tokimak = "0.0.1"
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-glog = "0.4"
tracing-indicatif = "0.3.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
