[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1.83"
clap = { version = "4", features = ["derive", "env"] }
russh = "0.45"
russh-keys = "0.45"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-glog = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
